src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__for_range_continue.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
let sum = 0
for i in 0..10 {
  if i == 5 {
    continue
  }
  sum += i
}
print(sum)
assert_eq(sum, 40)  // 0+1+2+3+4+6+7+8+9 = 40 (skips 5)
}

OK
Nil

STDOUT
40
