src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__for_range_empty.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
let count = 0
for i in 5..5 {
  count += 1
}
print(count)
assert_eq(count, 0)

for i in 10..5 {
  count += 1
}
assert_eq(count, 0)
}

OK
Nil

STDOUT
0
