src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__for_range_exclusive_basic.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
let count = 0
for i in 0..5 {
  print(i)
  count += 1
}
assert_eq(count, 5)
}

OK
Nil

STDOUT
0
1
2
3
4
