src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__for_range_exclusive_sum.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
let sum = 0
for i in 0..10 {
  sum += i
}
print(sum)
assert_eq(sum, 45)  // 0+1+2+3+4+5+6+7+8+9 = 45
}

OK
Nil

STDOUT
45
