src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__for_range_inclusive_sum.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
let sum = 0
for i in 1..=10 {
  sum += i
}
print(sum)
assert_eq(sum, 55)  // 1+2+3+4+5+6+7+8+9+10 = 55
}

OK
Nil

STDOUT
55
