src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__for_range_list_append.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
let source = [1, 2, 3, 4, 5]
let result = []
for i in 0..list_len(source) {
  append(result, source[i] * 2)
}

assert_eq(list_len(result), 5)
for i in 0..list_len(result) {
  assert_eq(source[i] * 2, result[i])
}
}

OK
Nil
