src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__for_range_list_indexing.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
let a = [10, 20, 30, 40, 50]
let sum = 0
for i in 0..list_len(a) {
  print(a[i])
  sum += a[i]
}
print(sum)
assert_eq(sum, 150)
}

OK
Nil

STDOUT
10
20
30
40
50
150
