src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__for_range_list_nested.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
let matrix = [[1, 2], [3, 4], [5, 6]]
let sum = 0
for i in 0..list_len(matrix) {
  let row = matrix[i]
  for j in 0..list_len(row) {
    print(row[j])
    sum += row[j]
  }
}
print(sum)
assert_eq(sum, 21)  // 1+2+3+4+5+6 = 21
}

OK
Nil

STDOUT
1
2
3
4
5
6
21
