src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__for_range_single.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
let count = 0
for i in 5..6 {
  print(i)
  count += 1
}
assert_eq(count, 1)

let count2 = 0
for i in 5..=5 {
  print(i)
  count2 += 1
}
assert_eq(count2, 1)
}

OK
Nil

STDOUT
5
5
